fix-alignment-issue

--- a/style.css
+++ b/style.css
@@ -206,20 +206,7 @@ p {
    margin: 10px 10px 20px;
    font-family: gotham-book;
 }
-
-.simple-prod-grid .pure-u-1:first-child .lp-single-product {
-    padding-left: 0;
-}
-
-.simple-prod-grid .pure-u-1:nth-child(4n) .lp-single-product {
-    padding-right: 0;
-}
-
-.simple-prod-grid .pure-u-1:nth-child(4n+1) .lp-single-product {
-    padding-left: 0;
-}
-
-
+ 
 
 /* Brand Sections */ 
 
@@ -243,13 +230,7 @@ p {
   box-shadow: -0.518px 1.932px 12px 0px rgba(0, 0, 0, 0.25);
 }
 
-.pure-u-1-2:first-child .lp-single-brand {
-    margin-left: 0px;
-}
-
-.pure-u-1-2:last-child .lp-single-brand {
-    margin-right: 0px;
-}
+ 
 
 .lp-single-brand > img {
     display: block;
@@ -1073,6 +1054,26 @@ p {
 
 
 /**********************************
+      laundry Landing page
+**********************************/
+
+
+/* Laundry banner  */
+
+.laundry .lp-banner-image {
+  background-image: url(img/laundry_banner.png);
+}
+
+
+.laundry .lp-single-product {
+  padding: 0 10px;
+}
+
+
+
+
+
+/**********************************
       Mobile Responsiveness
 **********************************/
 
@@ -1182,28 +1183,66 @@ p {
   }
 
 
+
+
+  /* Brands logos */
+
+  .pure-u-lg-1-6:nth-child(2n) .lp-single-brand {
+      margin-right: 0;
+  }
+
+  .pure-u-lg-1-6:nth-child(2n+1) .lp-single-brand {
+      margin-left: 0;
+  }
+
+
+
+  /* for support page quic links */
+  .pure-u-md-1-3:nth-child(2n) .support-item {
+      margin-right: 0px;
+  }
+  
+  .pure-u-md-1-3:nth-child(2n+1) .support-item {
+      margin-left: 0px;
+  }
+
+
+
+}
+
+
+@media screen and (min-width: 48em) {
+
+
+  /* for support page quic links */
+  .pure-u-md-1-3:nth-child(3n) .support-item {
+      margin-right: 0px;
+  }
+  
+  .pure-u-md-1-3:nth-child(3n+1) .support-item {
+      margin-left: 0px;
+  }
+
+
 }
 
 
 
+@media screen and (min-width: 48em) and (max-width: 64em) {
 
-/**********************************
-      laundry Landing page
-**********************************/
+  /* Brands logos */
+
+  .pure-u-lg-1-6:nth-child(3n) .lp-single-brand {
+      margin-right: 0;
+  }
+
+  .pure-u-lg-1-6:nth-child(3n+1) .lp-single-brand {
+      margin-left: 0;
+  }
 
 
-/* Laundry banner  */
-
-.laundry .lp-banner-image {
-  background-image: url(img/laundry_banner.png);
 }
-
-
-.laundry .lp-single-product {
-  padding: 0 10px;
-}
-
-
+ 
 
 
 @media screen and (max-width: 64em)  {
@@ -1215,16 +1254,34 @@ p {
       margin-bottom: 40px;
   }
   
-  .simple-prod-grid .pure-u-1:first-child .lp-single-product {
-    padding-left: 40px;
+  
+  /* for 4 column types */
+  .simple-prod-grid .pure-u-lg-1-4:nth-child(2n) .lp-single-product {
+      padding-right: 0;
   }
   
-  .simple-prod-grid .pure-u-1:nth-child(4n+1) .lp-single-product {
-    padding-left: 40px;
+  .simple-prod-grid .pure-u-lg-1-4:nth-child(2n+1) .lp-single-product {
+      padding-left: 0;
   }
   
-  .simple-prod-grid .pure-u-1:nth-child(4n) .lp-single-product {
-    padding-right: 40px;
+  /* for 5 column types */
+  .simple-prod-grid .pure-u-lg-1-5:nth-child(2n) .lp-single-product {
+      margin-right: -10px;
+  }
+  
+  .simple-prod-grid .pure-u-lg-1-5:nth-child(2n+1) .lp-single-product {
+      margin-left: -10px;
+  }
+
+
+
+  /* for 5 column finishes */
+  .pure-u-lg-1-5:nth-child(2n) .lp-single-finish {
+      margin-right: 0px;
+  }
+  
+  .pure-u-lg-1-5:nth-child(2n+1) .lp-single-finish {
+      margin-left: 0px;
   }
 
 
@@ -1235,15 +1292,7 @@ p {
       margin-bottom: 20px;
   }
 
-  .pure-u-1-2:first-child .lp-single-brand {
-      margin-left: 10px;
-  }
-
-  .pure-u-1-2:last-child .lp-single-brand {
-      margin-right: 10px;
-  }
-
-
+   
 
   /* Offers Section */
 
@@ -1256,6 +1305,61 @@ p {
 
 }
  
+
+
+
+
+@media screen and (min-width: 64em)  {
+
+
+  /* for 4 columns */
+  .simple-prod-grid .pure-u-lg-1-4:nth-child(4n) .lp-single-product {
+      padding-right: 0;
+  }
+  
+  .simple-prod-grid .pure-u-lg-1-4:nth-child(4n+1) .lp-single-product {
+      padding-left: 0;
+  }
+  
+  /* for 5 columns */
+  .simple-prod-grid .pure-u-lg-1-5:nth-child(5n) .lp-single-product {
+      margin-right: -10px;
+  }
+  
+  .simple-prod-grid .pure-u-lg-1-5:nth-child(5n+1) .lp-single-product {
+      margin-left: -10px;
+  }
+
+
+  /* for 5 column finishes */
+  .pure-u-lg-1-5:nth-child(5n) .lp-single-finish {
+      margin-right: 0px;
+  }
+  
+  .pure-u-lg-1-5:nth-child(5n+1) .lp-single-finish {
+      margin-left: 0px;
+  }
+
+
+
+  /* Brands logos */
+
+  .pure-u-lg-1-6:nth-child(6n) .lp-single-brand {
+      margin-right: 0;
+  }
+
+  .pure-u-lg-1-6:nth-child(6n+1) .lp-single-brand {
+      margin-left: 0;
+  }
+
+
+
+
+}
+
+
+
+
 
 
 
